wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: prod
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: wiki
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-deployment
  namespace: prod
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - name: wiki
        image: phanoix/gcpedia:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/image
          name: wiki-data-volume
        - mountPath: /var/www/html/LocalSettings.php
          subPath: LocalSettings.php
          name: wiki-settings
      - name: parsoid
        image: phanoix/parsoid:latest
        ports:
        - containerPort: 8142
      volumes:
      - name: wiki-data-volume
        persistentVolumeClaim:
          claimName: wiki-data-volume-claim
      - name: wiki-settings
        configMap:
          name: wiki-config
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-pdf
  namespace: prod
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: wiki
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-pdf-deployment
  namespace: prod
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - name: render
        image: msokk/electron-render-service:1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-db
  namespace: prod
spec:
  clusterIP: None
  ports: 
    - protocol: TCP
      port: 3306
  selector:
    app: wiki-db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-db-deployment
  namespace: prod
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: wiki-db-volume
      volumes:
      - name: wiki-db-volume
        persistentVolumeClaim:
          claimName: wiki-db-volume-claim
